// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render assigned contact 1`] = `
<Flex
  align="center"
  justify="center"
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  value={1}
>
  <Image
    resizeMode="contain"
    source={1443235}
    style={
      Object {
        "flexShrink": 1,
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#007398",
        "fontSize": 42,
        "paddingTop": 10,
      }
    }
    type="header"
  >
    some header
  </MyText>
  <MyText
    style={
      Object {
        "color": "#505256",
        "fontSize": 16,
        "paddingHorizontal": 70,
        "paddingVertical": 10,
        "textAlign": "center",
      }
    }
  >
    some description
  </MyText>
</Flex>
`;

exports[`render with content 1`] = `
<Flex
  align="center"
  justify="center"
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  value={1}
>
  <Image
    resizeMode="contain"
    source={1443235}
    style={
      Object {
        "flexShrink": 1,
      }
    }
  />
  <MyText
    style={
      Object {
        "color": "#007398",
        "fontSize": 42,
        "paddingTop": 10,
      }
    }
    type="header"
  >
    some header
  </MyText>
  <MyText
    style={
      Object {
        "color": "#505256",
        "fontSize": 16,
        "paddingHorizontal": 70,
        "paddingVertical": 10,
        "textAlign": "center",
      }
    }
  >
    some description
  </MyText>
  <MyText>
    Content
  </MyText>
</Flex>
`;
